# scaffold

./: .dockerignore  .env.example  .gitattributes  .gitignore  .lycheeignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .prettierignore  .readthedocs.yaml.example  CHANGELOG.md  CHANGES.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: backend-reviewer.md  doc-reviewer.md  frontend-reviewer.md  general-reviewer.md  issue-planner.md  recursive-implementer.md  recursive-orchestrator.md  recursive-planner.md  recursive-reviewer.md  test-reviewer.md
.claude/commands/: address-review.md  create-issue.md  create-pr.md  implement-issue.md  onboard.md  plan-issue.md  recursive-implement.md  review-pr.md
.claude/skills/api-error-patterns/: SKILL.md
.claude/skills/claude-config/: SKILL.md
.claude/skills/docs-patterns/: SKILL.md
.claude/skills/frontend-patterns/: SKILL.md
.claude/skills/github-conventions/: SKILL.md  plan-format.md
.claude/skills/logging-patterns/: SKILL.md
.claude/skills/recursive-development/: SKILL.md
.claude/skills/recursive-execution/: SKILL.md
.claude/skills/recursive-planning/: SKILL.md
.claude/skills/recursive-quality/: SKILL.md
.claude/skills/testing-patterns/: SKILL.md
.devcontainer/: devcontainer.json  post-attach.sh  post-create.sh  post-start.sh  setup.sh
.github/: SECURITY.md  dependabot.yml
.github/workflows/: ci.yml  claude.yml  codeql.yml  dependabot-automerge.yml  external-link-check.yml  link-check.yml  pages.yml  pages.yml.example  publish-docker.yml  publish-pypi.yml  release.yml  scorecard.yml
docs/: conf.py  getting-started.md  index.md  reference.md
src/app/: __init__.py  __main__.py  log.py
tests/: conftest.py  test_log.py  test_smoke.py
